<resources>
    <string name="app_name">Cin\'app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_popular_movies">Current popular movies</string>
    <string name="current_popular_serie">Current popular serie</string>
    <string name="movies_in_theaters">Movies in theaters</string>
    <string name="series_on_the_air">Series on the air</string>
    <string name="movies_upcoming">Upcoming movies</string>
    <string name="series_airing_today">Series airing today</string>
    <string name="movies_top_rated">Top rated movies</string>
    <string name="series_top_rated">Top rated series</string>
    <string name="seen_movies">Seen movies</string>
    <string name="movies_to_see">Movies to see</string>
    <string name="seen_series">Seen series</string>
    <string name="series_to_see">Series to see</string>
    <string name="next_releases">Next Releases</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="serie">Serie</string>
    <string name="search">Search</string>
    <string name="aucun_r_sultat">Aucun résultat</string>
    <string name="title">title</string>
    <string name="overview">overview</string>
    <string name="release_date">21/12/2019"</string>
    <string name="add_to_viewed">Not view</string>
    <string name="remove_from_viewed">View</string>
    <string name="rate">Rate</string>
</resources>