<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/first_grey"
        tools:context=".ui.fragments.HomeFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="414dp"
            android:layout_height="24dp"
            android:text="@string/current_popular_movies"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            tools:layout_editor_absoluteX="-3dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/first_grey"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="414dp"
            android:layout_height="24dp"
            android:text="@string/current_popular_serie"
            app:layout_constraintTop_toBottomOf="@+id/rc_popular_movies"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_popular_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/first_grey"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="414dp"
            android:layout_height="24dp"
            android:text="@string/movies_top_rated"
            app:layout_constraintTop_toBottomOf="@+id/rc_popular_series"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            tools:layout_editor_absoluteX="-3dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_top_rated_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/first_grey"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="414dp"
            android:layout_height="24dp"
            android:text="@string/series_top_rated"
            app:layout_constraintTop_toBottomOf="@+id/rc_top_rated_movies"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_top_rated_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/first_grey"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>